Update plugin for Jdk 9+ (must define --module-path when available)