@@ -1,5 +1,7 @@
 /*
- * Copyright 2017-2018 the original author or authors.
+ * SPDX-License-Identifier: Apache-2.0
+ *
+ * Copyright 2017-2018 Andres Almiray.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,20 +18,20 @@
 package org.kordamp.gradle.jdktools
 
 import org.gradle.api.DefaultTask
+import org.gradle.api.JavaVersion
+import org.gradle.api.plugins.JavaPlugin
 import org.gradle.api.tasks.Input
-import org.gradle.api.tasks.InputDirectory
 import org.gradle.api.tasks.Optional
 import org.gradle.api.tasks.OutputDirectory
 import org.gradle.api.tasks.TaskAction
-import org.gradle.tooling.BuildException
+import org.gradle.api.tasks.compile.JavaCompile
 import org.zeroturnaround.exec.ProcessExecutor
 
 /**
  * @author Andres Almiray
  * @author Mark Paluch
  */
-class JDepsTask extends DefaultTask {
-    @Input boolean failOnError = true
+class JDepsReportTask extends DefaultTask {
     @Input boolean verbose = false
     @Input boolean summary = false
     @Input boolean profile = false
@@ -39,17 +41,52 @@ class JDepsTask extends DefaultTask {
     @Input @Optional List<String> configurations = ['runtime']
     @Input @Optional List<String> sourceSets = ['main']
 
-    List<String> failures = []
+    List<String> commandOutput = []
     private Object reportDir
+
+    JDepsReportTask() {
+        extensions.create('moduleOptions', ModuleOptions)
+    }
 
     @TaskAction
     void evaluate() {
+        ModuleOptions moduleOptions = extensions.getByType(ModuleOptions)
+        JavaCompile compileJava = project.tasks.findByName(JavaPlugin.COMPILE_JAVA_TASK_NAME)
+        String classpath = compileJava.classpath.asPath
+        List<String> compilerArgs = compileJava.options.compilerArgs
+
         final List<String> baseCmd = ['jdeps']
         if (summary) baseCmd << '-s'
         if (verbose) baseCmd << '-v'
         if (profile) baseCmd << '-profile'
         if (recursive) baseCmd << '-recursive'
         if (jdkinternals) baseCmd << '-jdkinternals'
+
+        if (JavaVersion.current().java9Compatible) {
+            if (classpath) {
+                baseCmd << '--module-path'
+                baseCmd << classpath
+            } else {
+                int modulePathIndex = compilerArgs.indexOf('--module-path')
+                if (modulePathIndex > -1) {
+                    baseCmd << '--module-path'
+                    baseCmd << compilerArgs[modulePathIndex + 1]
+                }
+            }
+
+            if (!moduleOptions.addModules.empty) {
+                baseCmd << '--add-modules'
+                baseCmd << moduleOptions.addModules.join(',')
+            } else {
+                int addModulesIndex = compilerArgs.indexOf('--add-modules')
+                if (addModulesIndex > -1) {
+                    baseCmd << '--add-modules'
+                    baseCmd << compilerArgs[addModulesIndex + 1]
+                }
+            }
+        }
+
+        compileJava.classpath = project.files()
 
         if (!configurations) configurations = ['runtime']
         if (!sourceSets) sourceSets = ['main']
@@ -60,10 +97,9 @@ class JDepsTask extends DefaultTask {
                     return // skip
                 }
 
-                String output = JDepsTask.runJDepsOn(baseCmd, file.absolutePath)
-
+                String output = JDepsReportTask.runJDepsOn(baseCmd, file.absolutePath)
                 if (output) {
-                    failures << "${project.name}\n$output"
+                    commandOutput << "\nProject: ${project.name}\n${output}".toString()
                 }
             }
         }
@@ -74,32 +110,27 @@ class JDepsTask extends DefaultTask {
                     return // skip
                 }
 
-                String output = JDepsTask.runJDepsOn(baseCmd, file.absolutePath)
-
+                String output = JDepsReportTask.runJDepsOn(baseCmd, file.absolutePath)
                 if (output) {
-                    failures << output
+                    commandOutput << "\nDependency: ${file.name}\n${output}".toString()
                 }
             }
         }
 
-        if (failures) {
-            if (consoleOutput) println failures.join('\n')
+        if (commandOutput) {
+            if (consoleOutput) println commandOutput.join('\n')
 
             File parentFile = getReportsDir()
             if (!parentFile.exists()) parentFile.mkdirs()
             File logFile = new File(parentFile, 'jdeps-report.txt')
 
-            logFile.withPrintWriter { w -> failures.each { f -> w.println(f) } }
-
-            if (failOnError) {
-                throw new BuildException("jdeps reported errors in ${project.name}".toString(), null)
-            }
+            logFile.withPrintWriter { w -> this.outputs.each { f -> w.println(f) } }
         }
     }
 
     @OutputDirectory
     File getReportsDir() {
-        if( this.reportDir == null) {
+        if (this.reportDir == null) {
             File reportsDir = new File(project.buildDir, 'reports')
             this.reportDir = new File(reportsDir, 'jdeps')
         }
